dev single product page gap  corrections between img and header

--- a/HTML-CSS-for-dev/detailsPage.css
+++ b/HTML-CSS-for-dev/detailsPage.css
@@ -366,6 +366,7 @@
             flex-direction: column;
             height: 80%;
             width: 80%;
+            gap: 40px;
         }
     }
 
